Jade y express con variables

--- a/hola_express/package.json
+++ b/hola_express/package.json
@@ -12,6 +12,7 @@
   "author": "Daniel",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "jade": "^1.11.0"
   }
 }
